# olymp-engine

./: .env.example  .gitignore  Cargo.toml  FEATURES.md  Makefile  README.md  docker-compose.yml  test_conn.sh  test_db.rs
config/: default.toml
crates/blurp-auth/: Cargo.toml
crates/blurp-auth/migrations/: 20260508_003_add_user_addresses.sql
crates/blurp-auth/src/: address.rs  email.rs  error.rs  extractors.rs  handlers.rs  jwt.rs  lib.rs  magic_link.rs  notifications.rs  oauth.rs  password.rs  registration.rs  state.rs  user.rs
crates/blurp-auth/tests/: jwt_tests.rs  magic_link_tests.rs  oauth_tests.rs  password_tests.rs  registration_tests.rs  user_tests.rs
crates/blurp-auth/tests/common/: mod.rs
crates/blurp-core/: Cargo.toml
crates/blurp-core/src/: config.rs  lib.rs  traits.rs  types.rs
crates/blurp-notification/: Cargo.toml
crates/blurp-notification/src/: email.rs  lib.rs  mailgun.rs  models.rs  smtp.rs  templates.rs
crates/blurp-server/: Cargo.toml
crates/blurp-server/src/: main.rs  openapi.rs
crates/blurp-server/tests/: e2e_cart_checkout_test.rs  e2e_catalog_test.rs  e2e_guest_tracking_test.rs  e2e_stock_test.rs
crates/blurp-server/tests/common/: mod.rs
crates/blurp-worker/: Cargo.toml
crates/blurp-worker/src/: lib.rs
crates/olymp-auth/: Cargo.toml
crates/olymp-auth/migrations/: 20260505_001_init_auth_schema.sql  20260505_002_add_admin_flag.sql  20260508_004_add_notification_preferences.sql  20260509_005_remove_admin_flag.sql  20260509_006_rename_notification_fields.sql
crates/olymp-auth/src/: email.rs  error.rs  extractors.rs  handlers.rs  jwt.rs  lib.rs  magic_link.rs  notifications.rs  oauth.rs  password.rs  registration.rs  state.rs  user.rs
crates/olymp-auth/tests/: jwt_tests.rs  magic_link_tests.rs  oauth_tests.rs  password_tests.rs  registration_tests.rs  user_tests.rs
crates/olymp-auth/tests/common/: mod.rs
crates/olymp-certificate/: Cargo.toml
crates/olymp-certificate/migrations/: 001_init.sql
crates/olymp-certificate/src/: handlers.rs  models.rs  repository.rs
crates/olymp-core/: Cargo.toml
crates/olymp-core/src/: auth.rs  config.rs  error.rs  lib.rs  response.rs  traits.rs  types.rs
crates/olymp-event/: Cargo.toml
crates/olymp-event/migrations/: 001_init.sql  002_stage_registration_window.sql  003_stage_instances.sql
crates/olymp-event/src/: handlers.rs  lib.rs  models.rs  repository.rs
crates/olymp-event/tests/: competition_setup.rs  peserta_e2e.rs
crates/olymp-event/tests/helpers/: mod.rs
crates/olymp-exam/: Cargo.toml
crates/olymp-exam/migrations/: 001_init.sql  002_answer_feedback.sql
crates/olymp-exam/src/: handlers.rs  models.rs  repository.rs
crates/olymp-monitoring/: Cargo.toml
crates/olymp-monitoring/migrations/: 001_init.sql
crates/olymp-monitoring/src/: handlers.rs  models.rs  repository.rs
crates/olymp-notification/: Cargo.toml
crates/olymp-notification/src/: email.rs  lib.rs  mailgun.rs  models.rs  smtp.rs  templates.rs
crates/olymp-participant/: Cargo.toml
crates/olymp-participant/migrations/: 001_init.sql
crates/olymp-participant/src/: handlers.rs  lib.rs  models.rs  repository.rs  service.rs
crates/olymp-ranking/: Cargo.toml
crates/olymp-ranking/migrations/: 001_init.sql
crates/olymp-ranking/src/: handlers.rs  models.rs  repository.rs
crates/olymp-rbac/: Cargo.toml
crates/olymp-rbac/migrations/: 001_init.sql  002_seed_permissions.sql  003_seed_roles.sql  004_exam_grade_permission.sql  005_peserta_participant_create.sql
crates/olymp-rbac/src/: cache.rs  handlers.rs  lib.rs  middleware.rs  models.rs  repository.rs
crates/olymp-rbac/tests/: rbac_integration.rs
crates/olymp-rbac/tests/common/: mod.rs
crates/olymp-region/: Cargo.toml
crates/olymp-region/migrations/: 001_init.sql
crates/olymp-region/src/: handlers.rs  lib.rs  models.rs  repository.rs
crates/olymp-server/: Cargo.toml
crates/olymp-server/src/: main.rs  middleware.rs  openapi.rs
crates/olymp-worker/: Cargo.toml
crates/olymp-worker/src/: error.rs  lib.rs
docs/plans/: 2026-05-09-olympiad-lms-multi-step-rbac-design.md
scripts/: migrate.sh  seed_catalog.sql  seed_products.sh
