[package]
name = "blurp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "blurp-server"
path = "src/main.rs"

[dependencies]
blurp-core = { path = "../blurp-core" }
blurp-auth = { path = "../blurp-auth" }
blurp-notification = { path = "../blurp-notification" }
blurp-worker = { path = "../blurp-worker" }
olymp-participant = { path = "../olymp-participant" }
olymp-exam = { path = "../olymp-exam" }
olymp-ranking = { path = "../olymp-ranking" }
olymp-monitoring = { path = "../olymp-monitoring" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
dotenvy = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
