[package]
name = "blurp-worker"
version.workspace = true
edition.workspace = true

[dependencies]
blurp-core = { path = "../blurp-core" }
blurp-auth = { path = "../blurp-auth" }
chrono = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
