[package]
name = "olymp-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
