[package]
name = "olymp-monitoring"
version.workspace = true
edition.workspace = true

[dependencies]
olymp-core = { path = "../olymp-core" }
olymp-exam = { path = "../olymp-exam" }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
