[package]
name = "olymp-participant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

blurp-core = { path = "../blurp-core" }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
