[package]
name = "olymp-ranking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

olymp-core = { path = "../olymp-core" }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
