[package]
name = "olymp-worker"
version.workspace = true
edition.workspace = true

[dependencies]
olymp-core = { path = "../olymp-core" }
olymp-auth = { path = "../olymp-auth" }
olymp-exam = { path = "../olymp-exam" }
chrono = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
